src/objects/Contracted_Quote_History_x__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Contracted_Quote_History__x</externalName>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_c__c</fullName>
        <externalDeveloperName>Field__c</externalDeveloperName>
        <label>Changed Field</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account_Name__c</fullName>
                </value>
                <value>
                    <fullName>Active__c</fullName>
                </value>
                <value>
                    <fullName>Count_of_Booked_Sales_Orders__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Close_Date__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Description__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Due_Date__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Involved_BU_Codes__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Involved_BU_Description__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Language__c</fullName>
                </value>
                <value>
                    <fullName>Quote_Lead__c</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>CQ_Number__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Requestor_Contact__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Requestor_User__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Sender__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Sender_Email__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Status__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Value__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Value_Converted_to_Euro__c</fullName>
                </value>
                <value>
                    <fullName>CQ_Value_Converted_to_USD__c</fullName>
                </value>
                <value>
                    <fullName>created</fullName>
                </value>
                <value>
                    <fullName>CurrencyIsoCode</fullName>
                </value>
                <value>
                    <fullName>Customer_Email_Sent__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Organization_Segment__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Project_Code__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Project_Site_City__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Project_Site_State_Province__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Request_Number__c</fullName>
                </value>
                <value>
                    <fullName>Destination_Country__c</fullName>
                </value>
                <value>
                    <fullName>Email_Status__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted__c</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewValue_c__c</fullName>
        <externalDeveloperName>NewValue__c</externalDeveloperName>
        <label>New Value</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OldValue_c__c</fullName>
        <externalDeveloperName>OldValue__c</externalDeveloperName>
        <label>Old Value</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentId_c__c</fullName>
        <externalDeveloperName>ParentId__c</externalDeveloperName>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>History: Surround CQ</label>
    <pluralLabel>History: Surround CQ</pluralLabel>
</CustomObject>